--- a/scripts/components/road/tpls/specialwork/roadNameTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameTpl.htm
@@ -4,7 +4,7 @@
 		    <div style="height: 100%;position: absolute;left: 0;right: 0;top: 0;overflow-y: hidden;z-index: -1">
 		        <div class="fm-table-content fm-fitsize scroll-styled" style="top:0px;bottom: 70px">
 			        <div id="box" class="table-header">
-			        	<div style="padding: 40px 0px 10px 10px" class=" pull-left">1212
+			        	<div style="padding: 40px 0px 10px 10px" class=" pull-left">
 			        		<button type="button" class="btn btn-shape" ng-click="openSubModal('search')">查询 </button>
 				            <button type="button" class="btn btn-shape" ng-click="openSubModal('add')">新增 </button>
 				            <button type="button" class="btn btn-shape" ng-click="openSubModal('split')">拆分</button>
@@ -23,18 +23,6 @@
 					                </li>
 					            </ul>
 					        </div>
-			                <!-- <div class="btn-group dropdown" uib-dropdown auto-close="outsideClick">
-			                    <button type="button" class="btn btn-default dropdown-toggle" uib-dropdown-toggle aria-haspopup="true" aria-expanded="true">
-			                        <i class="glyphicon glyphicon-th icon-th"></i> <span class="caret"></span>
-			                    </button>
-			                    <ul class="dropdown-menu pull-right" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-single-button">
-			                        <li ng-repeat="item in cols" role="menuitem">
-			                        	<label style="padding: 3px 20px;">
-			                        		<input type="checkbox" value="{{item.field}}" ng-model='item.show'> {{item.title}}
-			                        	</label>
-			                        </li>
-			                    </ul>
-			                </div> -->
 			            </div>
 			        </div>
                     <script type="text/ng-template" id="headerCheckbox.html">
@@ -44,9 +32,9 @@
 		                <colgroup>
 		                <col ng-repeat="col in cols | filter:{show: true}" width="{{col.width || '100'}}"/>
 		                </colgroup>
-		                <tr ng-repeat="row in $data" ng-dblClick="openEditPanel(row,$index)" ng-class="{true:'active'}[itemActive == $index]">
+		                <tr ng-repeat="row in $data" ng-dblClick="openEditPanel(row,$index)" ng-class="{true:'tr-backcolor',false:''}[row.checked]">
 		                    <td ng-repeat="col in $columns" ng-switch="col.field">
-                                <input ng-switch-when="selector" type="checkbox" ng-model="checkboxes.items[row.id]" />
+                                <input ng-switch-when="selector" type="checkbox" ng-model="row.checked" />
 		                        <p title="{{row[col.field]}}" ng-bind-html="col.getValue?col.getValue(this,row):row[col.field]"></p>
 		                    </td>
 		                </tr>
