--- a/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
@@ -28,10 +28,10 @@
             <ul class="fm-ul fm-ul-form col-md-4">
                 <li>
                     <label>道路名组ID:</label>
-                    <nobr>
+                    <div>
                     	<input type="text" class="fm-control disedit" ng-model="roadNameData.nameGroupid"/>
                     	<!-- <a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;" ng-click="openSearchModal('nameGroup')"></a> -->
-                    </nobr>
+                    </div>
                 </li>
                 <li>
                     <label>道路名发音:</label>
@@ -43,7 +43,7 @@
                     <label>类型名称:</label>
                     <nobr>
                     	<input type="text" class="fm-control disedit" ng-model="roadNameData.type"/>
-                    	<a ng-show="typeEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;" ng-click="openSearchModal('type')"></a>
+                    	<a ng-show="typeEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;height:15px;" ng-click="openSearchModal('type')"></a>
                     </nobr>
                 </li>
                 <li>
@@ -70,7 +70,7 @@
                     <label >行政区划:</label>
                     <nobr>
                     	<input type="text" class="fm-control disedit" ng-model="roadNameData.adminId"/>
-                    	<a ng-show="adminIdEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;" ng-click="openSearchModal('admin')"></a>
+                    	<a ng-show="adminIdEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;height:15px;" ng-click="openSearchModal('admin')"></a>
                     </nobr>
                 </li>
                 <li>
