--- a/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
@@ -1,7 +1,16 @@
 <div class="fm-panel" ng-controller="BeginCheckPanelCtrl" style="margin:0px;">
     <div class="title">执行检查</div>
     <div class="content">
-        <form name="outerForm" class="tab-form-demo">
+        <div class="flow-container">
+            <button type="button" class="btn btn-xs fm-output-btn">道路检查</button>
+            <button type="button" class="btn btn-xs fm-output-btn">POI检查</button>
+        </div>
+        <div class="flow-container">
+          <label ng-repeat="item in checkCondition" class="col-xs-12">
+            <input type="checkbox" name="condition" value="{{item.id}}">{{item.label}}
+          </label>
+        </div>
+        <!-- <form name="outerForm" class="tab-form-demo">
             <uib-tabset active="activeForm">
                 <uib-tab index="0" heading="道路检查">
                     <ng-form name="nestedForm">
@@ -15,7 +24,7 @@
                     Some Tab Content
                 </uib-tab>
             </uib-tabset>
-        </form>
+        </form> -->
         <!-- <div>后台检查:</div>
         <div class="row scroll-styled dark" style="max-height: 200px;margin:5px;">
             <label ng-repeat="item in tipList" class="col-md-4">
