--- a/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
@@ -29,8 +29,8 @@
                 <li>
                     <label>道路名组ID:</label>
                     <nobr>
-                    	<input type="text" class="fm-control disedit" ng-model="roadNameData.nameGroupId"/>
-                    	<a ng-show="nameGroupIdEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;" ng-click="openSearchModal('nameGroup')"></a>
+                    	<input type="text" class="fm-control disedit" ng-model="roadNameData.nameGroupid"/>
+                    	<a ng-show="nameGroupidEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;" ng-click="openSearchModal('nameGroup')"></a>
                     </nobr>
                 </li>
                 <li>
@@ -69,7 +69,7 @@
                 <li>
                     <label >行政区划:</label>
                     <nobr>
-                    	<input type="text" class="fm-control disedit" ng-model="roadNameData.adminId"/>
+                    	<input type="text" class="fm-control disedit" ng-model="roadNameData.adminName"/>
                     	<a ng-show="adminIdEditable != false" href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: 0px;height:15px;" ng-click="openSearchModal('admin')"></a>
                     </nobr>
                 </li>
