--- a/scripts/components/road/tpls/specialwork/searchSubModalTpl.htm
+++ b/scripts/components/road/tpls/specialwork/searchSubModalTpl.htm
@@ -19,16 +19,16 @@
                 <li>
                     <label>行政区划:</label>
                     <nobr>
-                    	<input type="text" class="fm-control" style="width:200px;" ng-model="param.admin"/>
+                    	<input type="text" class="fm-control" style="width:200px;" ng-model="admin"/>
                     	<a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: -30px;" ng-click="openSubSearchModal('admin')"></a>
                     </nobr>
                 </li>
-                <li>
+                <!-- <li>
                     <label>自定义SQL语句:</label>
                     <div>
                         <textarea  type="text" class="fm-control" ng-model="param.sql" style="width:400px;height:50px;"></textarea>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </div>
         <div style="border-bottom: 1px solid #ddd;"></div>
