--- a/less/editor.less
+++ b/less/editor.less
@@ -1640,7 +1640,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   border-left:@borderStyle @borderWidth @borderColor;
 }
 
-form input[type="text"].ng-dirty,textarea.ng-dirty,select.ng-dirty,input[type="number"].ng-dirty {
+form input[type="text"].ng-dirty,form textarea.ng-dirty,form select.ng-dirty,form input[type="number"].ng-dirty {
   .border-left(solid,2px,@red) !important;
 }
 form select.localytics-chosen.ng-dirty + div > a {
@@ -1841,3 +1841,12 @@ form input[type=checkbox].ng-dirty:before {
 .tr-backcolor{
   background-color: rgba(85, 85, 85, 0.5);
 }
+
+.table-input{
+  color: white;
+  background-color: black;
+  height: 24px;
+  font-size: 12px;
+  padding: 2px 4px;
+}
+
