--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1649,3 +1649,34 @@ form input[type=checkbox].ng-dirty:before {
 .tr-backcolor {
   background-color: rgba(85, 85, 85, 0.5);
 }
+.log-message-container {
+  top: auto;
+  right: auto;
+  bottom: 0;
+  left: 40px;
+  position: absolute;
+  width: 250px;
+  z-index: 99;
+}
+.log-message-container .log-message {
+  color: #fff;
+  background-color: #222;
+  padding: 13px;
+  height: 40px;
+  margin-top: 3px;
+}
+.log-message-container .log-message .log-message-remove {
+  height: 100%;
+  width: 20px;
+  position: absolute;
+  right: 0;
+  color: #fff;
+  opacity: .5;
+  top: 0;
+  cursor: pointer;
+  padding: 4px;
+  padding-top: 13px;
+}
+.log-message-container .log-message .log-message-remove:hover {
+  opacity: 1;
+}
