--- a/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/speedOfOrdinaryTpl.html
@@ -13,7 +13,7 @@
             <div><label class="control-label">限速类型</label></div>
             <div class="inline">
                 <select ng-model="oridiData.speedType"
-                        ng-options="value.id as value.label for value in speedTypeOption">
+                        ng-options="value.id as value.label for value in speedTypeOption" disabled>
                     <option>--</option>
                 </select>
             </div>
