--- a/scripts/components/poi/tpls/attr-base/poiDataListTpl.html
+++ b/scripts/components/poi/tpls/attr-base/poiDataListTpl.html
@@ -16,7 +16,9 @@
             </button>
         </div>
     </div>
+    <!-- 表格头部功能区 -->
     <div>
+        <!-- 字段选择 -->
         <div>
             <span class="fm-list-filter" uib-dropdown on-toggle="toggled(open)" auto-close="outsideClick">
             <button type="button" class="btn dropdown-toggle btn-xs fm-xs-btn" uib-dropdown-toggle aria-haspopup="true" aria-expanded="true">
@@ -31,6 +33,7 @@
             </ul>
             </span>
         </div>
+        <!-- 过滤字段下拉框 -->
         <div class="table-search fm-inline fm-list-dropdown">
             <div class="btn-group" uib-dropdown is-open="status.isopen">
                 <button type="button" class="btn btn-xs dropdown-toggle fm-xs-btn fm-group-btn" uib-dropdown-toggle ng-disabled="disabled">
@@ -45,6 +48,7 @@
             <button class="btn btn-xs btn-purple" ng-style="{'display':{true:'inline',false:'none'}[dataListType==2]}" ng-click="doSubmitData();">数据提交</button>
         </div>
     </div>
+    <!-- 表格体数据显示区 -->
     <div style="height: 100%;position: absolute;left: 0;right: 0;top: 0;overflow-y: hidden;z-index: -1">
         <div class="fm-table-content fm-fitsize dark scroll-styled" style="top:98px;bottom: 40px">
             <table ng-table-dynamic="tableParams with cols" class="table table-condensed table-striped poi-list">
