--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -627,7 +627,7 @@
                         </div>
                         <!--end 卡车限制-->
                         <!--begin 车道数-->
-                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('num')">
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('num') && !dataTipsData.hasOwnProperty('mileageNum')">
                             <label class="col-sm-5 control-label" style="padding: 4px">车道数:</label>
                             <div class="col-sm-7" style="padding: 3px">
                                 <span class="label" ng-bind='dataTipsData.num'></span>
