--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -68,9 +68,9 @@
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSLOPE':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSLOPE')">坡度</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDDIRECTROUTE':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDDIRECTROUTE')">顺行</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSPEEDBUMP':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSPEEDBUMP')">减速带</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFINTER':'active'}[featureOperator]" ng-controller="addCRFShapeCtrl" ng-click="addShape('CRFINTER')">CRF交叉点</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFROAD':'active'}[featureOperator]" ng-controller="addCRFShapeCtrl" ng-click="addShape('CRFROAD')">CRF道路</button>
-                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFOBJ':'active'}[featureOperator]" ng-controller="addCRFShapeCtrl" ng-click="addShape('CRFFEATURE')">CRF对象</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFINTER':'active'}[featureOperator]" ng-controller="addCRFShapeCtrl" ng-click="addCRFShape('CRFINTER')">CRF交叉点</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFROAD':'active'}[featureOperator]" ng-controller="addCRFShapeCtrl" ng-click="addCRFShape('CRFROAD')">CRF道路</button>
+                <button type="button" class="btn btn-xs btn-feat" ng-class="{'CRFOBJ':'active'}[featureOperator]" ng-controller="addCRFShapeCtrl" ng-click="addCRFShape('CRFOBJECT')">CRF对象</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSAMENODE':'active'}[featureOperator]" ng-controller="addSameFeatureCtrl" ng-click="addShape('RDSAMENODE')">同一点</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSAMELINK':'active'}[featureOperator]" ng-controller="addSameFeatureCtrl" ng-click="addShape('RDSAMELINK')">同一线</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDSE':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('RDSE')">分叉口</button>
