--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -718,6 +718,14 @@
                             </div>
                         </div>
                         <!-- end 可逆车道 -->
+                        <!-- begin 公交车道 -->
+                        <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="busDriveway">
+                            <label class="col-sm-5 control-label" style="padding: 4px">公交车道:</label>
+                            <div class="col-sm-7" style="padding: 3px">
+                                <span class="label" ng-bind="busDriveway"></span>
+                            </div>
+                        </div>
+                        <!-- end 公交车道 -->
                     </form>
                 </div>
             </div>
