--- a/scripts/components/poi/tpls/attr-deep/commonDeepTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/commonDeepTpl.html
@@ -48,7 +48,7 @@
             <div class="content" style="padding-bottom: 10px;min-height: 150px">
                 <ul class="fm-ul fm-ul-form">
                     <li style="border-bottom: 1px dashed #fff;margin-bottom: 3px;">
-                        <label style="display: block;width: 100%">营业时间 <span style="padding:.1em .6em .1em;font-weight: normal" class="label label-default">{{timeItems.length}} 条</span></label>
+                        <label style="display: block;width: 100%">营业时间列表 <span style="padding:.1em .6em .1em;font-weight: normal" class="label label-default">{{timeItems.length}} 条</span></label>
                         <i class="glyphicon glyphicon-plus-sign pull-right" title="增加" ng-click="addBusinessHour()" aria-hidden="true"></i>
                     </li>
                     <li ng-repeat="timeItem in timeItems">
